--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -304,16 +304,21 @@ jobs:
       fail-fast: false
       matrix:
         arch: [aarch64, ppc64le, s390x]
-        build: ['cp36-*', 'cp37-*', 'cp38-*', 'cp39-*', 'cp310-*', 'cp311-*', 'cp312-*']
+        build_manylinux: ['cp36-manylinux*', 'cp37-manylinux*', 'cp38-manylinux*',
+                          'cp39-manylinux*', 'cp310-manylinux*', 'cp311-manylinux*',
+                          'cp312-manylinux*']
+        build_musllinux: ['cp36-musllinux*', 'cp37-musllinux*', 'cp38-musllinux*',
+                          'cp39-musllinux*', 'cp310-musllinux*', 'cp311-musllinux*',
+                          'cp312-musllinux*']
         include:
           - arch: aarch64
-            build: 'pp37-*'
+            build_manylinux: 'pp37-*'
           - arch: aarch64
-            build: 'pp38-*'
+            build_manylinux: 'pp38-*'
           - arch: aarch64
-            build: 'pp39-*'
+            build_manylinux: 'pp39-*'
           - arch: aarch64
-            build: 'pp310-*'
+            build_manylinux: 'pp310-*'
 
     steps:
     - uses: actions/checkout@v4
@@ -337,11 +342,11 @@ jobs:
       with:
         platforms: all
 
-    - name: Build wheels
+    - name: Build wheels for manylinux
       uses: pypa/cibuildwheel@v2.15.0
       env:
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD: ${{ matrix.build_manylinux }}
           CIBW_BUILD_VERBOSITY: 1
           CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers 
                             LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader 
@@ -356,6 +361,29 @@ jobs:
       with:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
+
+
+    - name: Build wheels for musllinux
+      uses: pypa/cibuildwheel@v2.15.0
+      env:
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader
+          CIBW_BEFORE_ALL: apk add libxrandr-dev && 
+                           git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           ../scripts/update_deps.py &&
+                           cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(pwd)/Vulkan-Headers/build/install .. &&
+                           make -j$(nproc) &&
+                           cd Vulkan-Headers &&
+                           ln -s ../loader lib 
+      with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
+
 
     - name: Show files
       run: ls -lh wheelhouse
