build wheels test

--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -183,8 +183,8 @@ jobs:
           output-dir: wheelhouse
 
       - name: Build wheels for x86 windows arm64 windows (cpu only)
-        if: (matrix.os == 'windows-2019' && matrix.arch == 'X86') || 
-            (matrix.os == 'windows-2019' && matrix.arch == 'ARM64')
+        if: (matrix.os == 'windows-2019' && matrix.arch == 'X86')   || 
+            (matrix.os == 'windows-2019' && matrix.arch == 'ARM64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
             (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
         uses: pypa/cibuildwheel@v2.15.0
