--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -212,110 +212,110 @@ jobs:
         with:
           path: wheelhouse/*.whl
 
-  # build_wheels_qemu:
-  #   name: ${{ matrix.arch }} ${{ matrix.build }}
-  #   runs-on: ubuntu-20.04
+  build_wheels_qemu:
+    name: ${{ matrix.arch }} ${{ matrix.build }}
+    runs-on: ubuntu-20.04
 
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       arch: [aarch64, ppc64le, s390x]
-  #       build: ['cp36-manylinux*',  'cp37-manylinux*',  'cp38-manylinux*',
-  #               'cp39-manylinux*',  'cp310-manylinux*', 'cp311-manylinux*',
-  #               'cp312-manylinux*', 'cp36-musllinux*',  'cp37-musllinux*', 
-  #               'cp38-musllinux*',  'cp39-musllinux*',  'cp310-musllinux*',
-  #               'cp311-musllinux*', 'cp312-musllinux*']
-  #       include:
-  #         - arch: aarch64
-  #           build: 'pp37-*'
-  #         - arch: aarch64
-  #           build: 'pp38-*'
-  #         - arch: aarch64
-  #           build: 'pp39-*'
-  #         - arch: aarch64
-  #           build: 'pp310-*'
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [aarch64, ppc64le, s390x]
+        build: ['cp36-manylinux*',  'cp37-manylinux*',  'cp38-manylinux*',
+                'cp39-manylinux*',  'cp310-manylinux*', 'cp311-manylinux*',
+                'cp312-manylinux*', 'cp36-musllinux*',  'cp37-musllinux*', 
+                'cp38-musllinux*',  'cp39-musllinux*',  'cp310-musllinux*',
+                'cp311-musllinux*', 'cp312-musllinux*']
+        include:
+          - arch: aarch64
+            build: 'pp37-*'
+          - arch: aarch64
+            build: 'pp38-*'
+          - arch: aarch64
+            build: 'pp39-*'
+          - arch: aarch64
+            build: 'pp310-*'
 
-  #   steps:
-  #   - uses: actions/checkout@v4
-  #     with:
-  #       submodules: true
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: true
 
-  #   - name: init submodules
-  #     shell: bash
-  #     run: |
-  #       cd ncnn-python-gpu
-  #       git submodule update --init
-  #       cd python
-  #       git submodule update --init
+    - name: init submodules
+      shell: bash
+      run: |
+        cd ncnn-python-gpu
+        git submodule update --init
+        cd python
+        git submodule update --init
 
-  #   - uses: actions/setup-python@v4
-  #     with:
-  #       python-version: '3.x'
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-  #   - name: Set up QEMU
-  #     uses: docker/setup-qemu-action@v2
-  #     with:
-  #       platforms: all
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      with:
+        platforms: all
 
-  #   - name: Build wheels for manylinux
-  #     if: (matrix.build != 'cp36-musllinux*') && (matrix.build != 'cp37-musllinux*') &&
-  #         (matrix.build != 'cp38-musllinux*') && (matrix.build != 'cp39-musllinux*') &&
-  #         (matrix.build != 'cp310-musllinux*') && (matrix.build != 'cp311-musllinux*') &&
-  #         (matrix.build != 'cp312-musllinux*')
-  #     uses: pypa/cibuildwheel@v2.15.0
-  #     env:
-  #         CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-  #         CIBW_BUILD: ${{ matrix.build }}
-  #         CIBW_BUILD_VERBOSITY: 1
-  #         CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers 
-  #                           LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader 
-  #         CIBW_BEFORE_ALL: yum -y install libXrandr-devel &&
-  #                          git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
-  #                          cd Vulkan-Loader && mkdir build && cd build &&
-  #                          ../scripts/update_deps.py &&
-  #                          cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(pwd)/Vulkan-Headers/build/install .. &&
-  #                          make -j$(nproc) &&
-  #                          cd Vulkan-Headers &&
-  #                          ln -s ../loader lib 
-  #     with:
-  #         package-dir: ./ncnn-python-gpu
-  #         output-dir: wheelhouse
-
-
-  #   - name: Build wheels for musllinux
-  #     if: (matrix.build == 'cp36-musllinux*') || (matrix.build == 'cp37-musllinux*') ||
-  #         (matrix.build == 'cp38-musllinux*') || (matrix.build == 'cp39-musllinux*') ||
-  #         (matrix.build == 'cp310-musllinux*') || (matrix.build == 'cp311-musllinux*') ||
-  #         (matrix.build == 'cp312-musllinux*')
-  #     uses: pypa/cibuildwheel@v2.15.0
-  #     env:
-  #         CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-  #         CIBW_BUILD: ${{ matrix.build }}
-  #         CIBW_BUILD_VERBOSITY: 1
-  #         CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader
-  #         CIBW_BEFORE_ALL: apk add libxrandr-dev && 
-  #                          git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
-  #                          cd Vulkan-Loader && mkdir build && cd build &&
-  #                          ../scripts/update_deps.py &&
-  #                          cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(pwd)/Vulkan-Headers/build/install .. &&
-  #                          make -j$(nproc) &&
-  #                          cd Vulkan-Headers &&
-  #                          ln -s ../loader lib 
-  #     with:
-  #         package-dir: ./ncnn-python-gpu
-  #         output-dir: wheelhouse
+    - name: Build wheels for manylinux
+      if: (matrix.build != 'cp36-musllinux*') && (matrix.build != 'cp37-musllinux*') &&
+          (matrix.build != 'cp38-musllinux*') && (matrix.build != 'cp39-musllinux*') &&
+          (matrix.build != 'cp310-musllinux*') && (matrix.build != 'cp311-musllinux*') &&
+          (matrix.build != 'cp312-musllinux*')
+      uses: pypa/cibuildwheel@v2.15.0
+      env:
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers 
+                            LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader 
+          CIBW_BEFORE_ALL: yum -y install libXrandr-devel &&
+                           git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           ../scripts/update_deps.py &&
+                           cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(pwd)/Vulkan-Headers/build/install .. &&
+                           make -j$(nproc) &&
+                           cd Vulkan-Headers &&
+                           ln -s ../loader lib 
+      with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
 
-  #   - name: Show files
-  #     run: ls -lh wheelhouse
-  #     shell: bash
+    - name: Build wheels for musllinux
+      if: (matrix.build == 'cp36-musllinux*') || (matrix.build == 'cp37-musllinux*') ||
+          (matrix.build == 'cp38-musllinux*') || (matrix.build == 'cp39-musllinux*') ||
+          (matrix.build == 'cp310-musllinux*') || (matrix.build == 'cp311-musllinux*') ||
+          (matrix.build == 'cp312-musllinux*')
+      uses: pypa/cibuildwheel@v2.15.0
+      env:
+          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.build }}
+          CIBW_BUILD_VERBOSITY: 1
+          CIBW_ENVIRONMENT: CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE VULKAN_SDK=/project/Vulkan-Loader/build/Vulkan-Headers LD_LIBRARY_PATH=/project/Vulkan-Loader/build/loader
+          CIBW_BEFORE_ALL: apk add libxrandr-dev && 
+                           git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+                           cd Vulkan-Loader && mkdir build && cd build &&
+                           ../scripts/update_deps.py &&
+                           cmake -DCMAKE_BUILD_TYPE=Release -DVULKAN_HEADERS_INSTALL_DIR=$(pwd)/Vulkan-Headers/build/install .. &&
+                           make -j$(nproc) &&
+                           cd Vulkan-Headers &&
+                           ln -s ../loader lib 
+      with:
+          package-dir: ./ncnn-python-gpu
+          output-dir: wheelhouse
 
-  #   - name: Verify clean directory
-  #     run: git diff --exit-code
-  #     shell: bash
 
-  #   - name: Upload wheels
-  #     uses: actions/upload-artifact@v3
-  #     with:
-  #       path: wheelhouse/*.whl
+    - name: Show files
+      run: ls -lh wheelhouse
+      shell: bash
+
+    - name: Verify clean directory
+      run: git diff --exit-code
+      shell: bash
+
+    - name: Upload wheels
+      uses: actions/upload-artifact@v3
+      with:
+        path: wheelhouse/*.whl
         
