--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -6,9 +6,9 @@ on:
 jobs:
   windows-build:
     name: windows image test
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     container:
-      image: mcr.microsoft.com/windows/servercore:ltsc2019
+      image: dockcross/windows-x86
     steps:
       - name: ls test
         shell: bash
