--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   windows-build:
     name: windows image test
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     container:
       image: dockcross/windows-x86
     steps:
