--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -15,5 +15,5 @@ jobs:
       options: --cpus 1
     steps:
       - name: Check for dockerenv file
-      - shell: bash
+        shell: bash
         run: ls
