--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -10,8 +10,4 @@ jobs:
     steps:
       - name: test hello world
         run: |
-          git clone https://github.com/dockcross/dockcross.git
-          cd dockcross
-          docker run --rm dockcross/linux-armv7 > ./dockcross-linux-armv7
-          chmod +x ./dockcross-linux-armv7
-          ./dockcross-linux-armv7 bash -c '$CC test/C/hello.c -o hello_arm'
+          docker run hello-world
