--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -12,4 +12,4 @@ jobs:
         run: |
           docker pull dockcross/windows-shared-x86
           docker images
-          docker run windows-shared-x86 echo "hello from win x86"
+          docker run dockcross/windows-shared-x86 echo "hello from win x86"
