--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -13,3 +13,5 @@ jobs:
           docker pull dockcross/windows-shared-x86
           docker images
           docker run dockcross/windows-shared-x86 echo "hello from win x86"
+          docker run -it busybox sh
+          ls
