--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -12,5 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - name: run ls
-        run: ls
+        run: |
+          systeminfo
           
