--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -68,21 +68,21 @@ jobs:
           # - { os: macos-latest, arch: x86_64 universal2, build: 'cp*'            } 
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
+      # - uses: actions/checkout@v3
+      #   with:
+      #     submodules: true
       
-      - name: init submodules
-        shell: bash
-        run: |
-          cd ncnn-python-gpu
-          git submodule update --init
-          cd python
-          git submodule update --init
+      # - name: init submodules
+      #   shell: bash
+      #   run: |
+      #     cd ncnn-python-gpu
+      #     git submodule update --init
+      #     cd python
+      #     git submodule update --init
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+      # - uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.x'
 
       - name: brew uninstall libomp for macos
         if: matrix.os == 'macos-latest'
@@ -213,7 +213,7 @@ jobs:
         if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
         shell: cmd
         run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1'))
+          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1'))
 
       # - name: Build wheels for windows ARM64
       #   if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
