--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   windows-build:
     name: Build
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
       - name: winget
         shell: powershell
